# habi-executive-dash

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: pages.yml
data/: budgets_ciclo.csv  mtd_forecast_manual.csv
scripts/: _bq.py  _common.py  refresh_data.py
scripts/kpis/: adj_ingresos.py  aging.py  burn.py  ciclo.py  contribution.py  ebitda.py  gmv.py  growth_historico.py  ingresos.py  inventario.py  margen.py  mtd_transactions.py  net_debt.py  opex.py  rotacion.py
site/: index.html
site/css/: styles.css
site/data/: kpi_aging.json  kpi_burn.json  kpi_ciclo.json  kpi_contribution.json  kpi_gmv.json  kpi_growth_historico.json  kpi_ingresos.json  kpi_ingresos_ajustados.json  kpi_inventario.json  kpi_margen_bruto.json  kpi_mtd_transactions.json  kpi_net_debt.json  kpi_opex.json  kpi_rotacion.json  meta.json
site/js/: app.js
